# cinemagoerng

./: .env.example  .gitignore  CHANGELOG.rst  CHANGES.md  CHANGES.rst  CONTRIBUTORS.md  DISCLAIMER.txt  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ruff.yml
cinemagoerng/: __init__.py  cli.py  custom_transformers.py  linguistics.py  lookup.py  model.py  operations.py  piculet.py  registry.py  transformers.py  web.py
cinemagoerng/specs/: title.json  title_akas.json  title_episodes.json  title_episodes_with_pagination.json  title_main.json  title_parental_guide.json  title_reference.json  title_taglines.json
misc/: html2json.py  notes.rst  sources.json
src/cinemagoerng/: __init__.py  cli.py  linguistics.py  lookup.py  model.py  piculet.py  registry.py  web.py
src/cinemagoerng/specs/: title_akas.json  title_episodes.json  title_episodes_with_pagination.json  title_main.json  title_parental_guide.json  title_reference.json  title_taglines.json
tests/: conftest.py  ruff.toml  shining.html  test_akas.py  test_cinemagoerng.py  test_cli.py  test_model.py  test_parentalguide.py  test_piculet.py  test_title.py  test_title_akas.py  test_title_common.py  test_title_episodes.py  test_title_main.py  test_title_parental_guide.py  test_title_parentalguide.py  test_title_reference.py  test_title_taglines.py  test_web.py
