[project]
name = "cinemagoerng"
version = "0.6"
description = "Retrieve data from the IMDb."
readme = "README.md"

authors = [
    {name = "H. Turgut Uyar", email = "uyar@tekir.org"},
]
license = "LGPL-3.0-or-later"
license-files = ["LICENSE.txt"]

keywords = [
    "imdb",
    "cinema",
    "movie",
    "film",
    "cast",
    "actor",
    "director",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

requires-python = "~=3.11"
dependencies = [
    "typedload~=2.39",
    "lxml~=5.4.0",
    "jmespath~=1.0.1",
]

[dependency-groups]
test = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
typing = [
    "mypy>=1.18.2",
    "lxml-stubs>=0.5.1",
    "types-jmespath>=1.0.2.20250809",
]
style = [
    "ruff>=0.14.2",
]
dev = [
    {include-group = "test"},
    {include-group = "typing"},
    {include-group = "style"},
    "tox-uv>=1.29.0",
]

[project.urls]
repository = "https://github.com/cinemagoer/cinemagoerng"

[project.scripts]
cinemagoerng = "cinemagoerng:cli.main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source_pkgs = ["cinemagoerng"]
omit = [
    "src/cinemagoerng/piculet.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["A", "E", "F", "I", "T", "W"]
ignore = ["E731"]

[tool.ruff.lint.per-file-ignores]
"cli.py" = ["T201"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py3{11,12,13,14}, pypy3{11}, types, style
isolated_build = True

[testenv]
runner = uv-venv-lock-runner
package = wheel
wheel_build_env = .pkg
commands =
    pytest

[testenv:coverage]
commands =
    pytest --cov

[testenv:types]
commands =
    mypy src tests

[testenv:style]
commands =
    ruff check --preview src tests
"""

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
